# task3.3

./: CMakeLists.txt  README.md  main.cpp
Application/Controller/: Controller.cpp  Controller.h
Application/Visual/: Visual.cpp  Visual.h
include/: Funcs.h  Server.h  TransmissionTable.h
include/InfoDescriptors/: Data.h  LinkDescriptor.h  MessageDescriptor.h
include/Packets/: FilePacket.h  HyperTextPacket.h  MailPacket.h  Packet.h
src/: Server.cpp  TransmissionTable.cpp
src/InfoDescriptors/: Data.cpp  LinkDescriptor.cpp  MessageDescriptor.cpp
src/Packets/: FilePacket.cpp  HyperTextPacket.cpp  MailPacket.cpp  Packet.cpp
tests/: FileTests.cpp  HyperTextTests.cpp  MailTests.cpp  MapTests.cpp  ServerTests.cpp  TableTests.cpp
unordered_map/: unordered_map.h
